--- a/web/eventos.xhtml
+++ b/web/eventos.xhtml
@@ -153,7 +153,7 @@
                                         <div class="card-header panel panel-default" style="margin-top: -5%; padding-top: 3%; background-color: white; border-radius: 0px; margin-bottom: 10px; color: black;">
 
                                             <!-- Form-->
-                                            <h:form class="form-signin">
+                                            <h:form class="form-signin" enctype="multipart/form-data">
                                                 <div class="row">
                                                     <div class="col-md-12">
                                                         <div class="row">
@@ -184,7 +184,7 @@
                                                                     <label style="font-size: 14px;color: black;padding-left: 10px;">
                                                                         Imagem:
                                                                     </label>
-                                                                    <h:inputText class="form-control" style="font-size: 14px; color: black;margin-left: 10px;"/>
+                                                                    <h:inputFile value="#{eventoBean.imagem}" class="form-control" style="font-size: 14px; color: black;margin-left: 10px;"/>
                                                                     <label style="font-size: 14px;color: black; padding-left: 10px;">
                                                                         Descrição:
                                                                     </label>
