--- a/web/meusAnimais.xhtml
+++ b/web/meusAnimais.xhtml
@@ -103,7 +103,9 @@
                                                 <div class="col-md-12" style="padding-top: 20px;">
                                                     <div class="row">
                                                         <div class="col-md-6" align="center" style="padding-bottom: 10px;">
-                                                            <a href="#" class="btn btn-danger " style="border-radius: 0px;"> Excluir</a>
+                                                            <h:form>
+                                                                <h:commandLink action="#{animalBean.ExcluirAnimal(animal)}" value="Excluir" class="btn btn-danger " style="border-radius: 0px;"/>
+                                                            </h:form>
                                                         </div>
                                                         <div class="col-md-6" align="center" style="padding-bottom: 10px;">
                                                             <h:form>
