--- a/web/meusAnuncios.xhtml
+++ b/web/meusAnuncios.xhtml
@@ -29,14 +29,11 @@
             </ui:insert>
         </div>
 
-
         <!-- Título da página -->
         <div style="margin-top: 7%; height: 100px; background-color: #1E90FF;" align="center">
             <h3 align="center" style="color: white; padding-top:  20px;">Meus anúncios</h3>
             <hr style="margin-left: 10px; margin-right: 20px;"/>
         </div>
-
-
 
         <!-- Listagem das anúncios-->
         <div class="container" id="tourpackages-carousel" >
@@ -59,9 +56,6 @@
                                             <div class="modal-header">
                                                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                                                 <h4 class="modal-title">#{anuncio.tituloAnuncio}</h4>
-                                                <div align="left">
-                                                    <p>Tipo: #{anuncio.tipoAnuncio}</p>
-                                                </div>
                                             </div>
                                             <div class="modal-body">
 
@@ -85,10 +79,14 @@
                                                 <div class="col-md-12" style="padding-top: 20px;">
                                                     <div class="row">
                                                         <div class="col-md-6" align="center" style="padding-bottom: 10px;">
-                                                            <a href="#" class="btn btn-danger " style="border-radius: 0px;"> Excluir</a>
+                                                            <h:form>
+                                                                <h:commandLink action="#{anuncioBean.ExcluirAnuncio(anuncio)}" value="Excluir" class="btn btn-danger " style="border-radius: 0px;" />
+                                                            </h:form>
                                                         </div>
                                                         <div class="col-md-6" align="center" style="padding-bottom: 10px;">
-                                                            <a href="editarAnuncio.jsf" class="btn btn-success " style="border-radius: 0px;"> Editar</a>
+                                                            <h:form>
+                                                                <h:commandLink action="#{anuncioBean.EditarAnuncio(anuncio)}" value="Editar" class="btn btn-success " style="border-radius: 0px;" />
+                                                            </h:form>
                                                         </div>
                                                     </div>
                                                 </div>
