--- a/web/meusEventos.xhtml
+++ b/web/meusEventos.xhtml
@@ -42,68 +42,70 @@
                 <br/>
                 <br/>
                 <c:forEach var="evento" items="#{eventoBean.meusEventos}">
-                <div class="col-xs-18 col-sm-6 col-md-3">
-                    <div class="thumbnail caixa">
-                        <img src="imagens/evento.png" alt="Foto do Evento" style="width:100%; height:170px; border-radius: 0px;"/>
-                        <div class="caption" align="center">
-                            <h5>#{evento.nomeEvento}</h5>
-                            <div align="left">
-                                <p>Data: #{evento.dataEvento}</p>
-                                <p>Local: #{evento.localizacao}</p>
-                            </div>
-                            <p><a href="#" class="btn btn-default" data-toggle="modal" data-target="##{evento.idEvento}" style="background-color: #87CEFF; color: white;border-radius: 0px;width: 100%;"><span class="glyphicon glyphicon-plus"></span><span></span>Ver Mais</a></p>
+                    <div class="col-xs-18 col-sm-6 col-md-3">
+                        <div class="thumbnail caixa">
+                            <img src="imagens/evento.png" alt="Foto do Evento" style="width:100%; height:170px; border-radius: 0px;"/>
+                            <div class="caption" align="center">
+                                <h5>#{evento.nomeEvento}</h5>
+                                <div align="left">
+                                    <p>Data: #{evento.dataEvento}</p>
+                                    <p>Local: #{evento.localizacao}</p>
+                                </div>
+                                <p><a href="#" class="btn btn-default" data-toggle="modal" data-target="##{evento.idEvento}" style="background-color: #87CEFF; color: white;border-radius: 0px;width: 100%;"><span class="glyphicon glyphicon-plus"></span><span></span>Ver Mais</a></p>
 
-                            <!-- Detalhamento do evento -->
-                            <div class="modal fade" id="#{evento.idEvento}" role="dialog">
-                                <div class="modal-dialog">
+                                <!-- Detalhamento do evento -->
+                                <div class="modal fade" id="#{evento.idEvento}" role="dialog">
+                                    <div class="modal-dialog">
 
-                                    <!-- Conteúdo -->
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                            <h4 class="modal-title">#{evento.nomeEvento}</h4>
-                                        </div>
-                                        <div class="modal-body">
+                                        <!-- Conteúdo -->
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                                <h4 class="modal-title">#{evento.nomeEvento}</h4>
+                                            </div>
+                                            <div class="modal-body">
 
-                                            <div class="col-md-12">
-                                                <div class="row">
-                                                    <div class="col-md-1">
-                                                    </div>
-                                                    <div class="col-md-5">
-                                                        <img src="imagens/evento.png" alt="Foto do Evento" style="width:100%; height:250px;border-radius: 0px;"/>
-                                                    </div>
-                                                    <div class="col-md-5">
-                                                        <div align="left">
-                                                            <p>Data: #{evento.dataEvento}</p>
-                                                            <p>Hora: #{evento.horarioEvento}</p>
-                                                            <p>Local: #{evento.localizacao}</p>
-                                                            <p>Descrição: #{evento.descricaoEvento}</p>
+                                                <div class="col-md-12">
+                                                    <div class="row">
+                                                        <div class="col-md-1">
+                                                        </div>
+                                                        <div class="col-md-5">
+                                                            <img src="imagens/evento.png" alt="Foto do Evento" style="width:100%; height:250px;border-radius: 0px;"/>
+                                                        </div>
+                                                        <div class="col-md-5">
+                                                            <div align="left">
+                                                                <p>Data: #{evento.dataEvento}</p>
+                                                                <p>Hora: #{evento.horarioEvento}</p>
+                                                                <p>Local: #{evento.localizacao}</p>
+                                                                <p>Descrição: #{evento.descricaoEvento}</p>
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-1">
                                                         </div>
                                                     </div>
-                                                    <div class="col-md-1">
+                                                </div>
+                                                <div class="col-md-12" style="padding-top: 20px;">
+                                                    <div class="row">
+                                                        <div class="col-md-6" align="center" style="padding-bottom: 10px;">
+                                                            <a href="#" class="btn btn-danger " style="border-radius: 0px;"> Excluir</a>
+                                                        </div>
+                                                        <div class="col-md-6" align="center" style="padding-bottom: 10px;">
+                                                            <h:form>
+                                                                <h:commandLink action="#{eventoBean.EditarEvento(evento)}" value="Editar" class="btn btn-success " style="border-radius: 0px;"/>
+                                                            </h:form>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col-md-12" style="padding-top: 20px;">
-                                                <div class="row">
-                                                    <div class="col-md-6" align="center" style="padding-bottom: 10px;">
-                                                        <a href="#" class="btn btn-danger " style="border-radius: 0px;"> Excluir</a>
-                                                    </div>
-                                                    <div class="col-md-6" align="center" style="padding-bottom: 10px;">
-                                                        <a href="editarEvento.jsf" class="btn btn-success " style="border-radius: 0px;"> Editar</a>
-                                                    </div>
-                                                </div>
+                                            <div class="modal-footer">
                                             </div>
-                                        </div>
-                                        <div class="modal-footer">
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                
+
                 </c:forEach>
 
 
