--- a/web/minhasExperiencias.xhtml
+++ b/web/minhasExperiencias.xhtml
@@ -55,7 +55,17 @@
                         <hr/>
                         <p>#{experiencia.texto}</p>
                         <h:form>
-                            <p><h:commandLink action="#{experienciaBean.VerExperiencia(experiencia)}" value="Ver Mais" class="btn btn-default" style="background-color: #ffa812; color: white;border-radius: 0px;"/></p>
+                            <div class="row" align="center">
+                                <div class="col-md-4">
+                                    <h:commandLink action="#{experienciaBean.VerExperiencia(experiencia)}" value="VER MAIS" class="btn btn-default" style="background-color: #ffa812; color: white;border-radius: 0px;"/>
+                                </div>
+                                <div class="col-md-4">
+                                    <h:commandLink action="#{experienciaBean.EditarExperiencia(experiencia)}" value="EDITAR" class="btn btn-primary" style="border-radius: 0px;"/>
+                                </div>
+                                <div class="col-md-4">
+                                    <h:commandLink action="#" value="EXCLUIR" class="btn btn-danger" style="border-radius: 0px;"/>
+                                </div>
+                            </div>
                         </h:form>
                         <hr/>
                     </c:forEach>
@@ -164,7 +174,7 @@
                             <h5>Cadastro</h5>
                         </div>
                         <div class="modal-body">
-                            <h:form>
+                            <h:form class="form" enctype="multipart/form-data">
                                 <div class="col-md-12">
                                     <div class="row">
 
@@ -190,7 +200,14 @@
                                                 <f:selectItem itemLabel="Saude" itemValue="Saude"/>
                                                 <f:selectItem itemLabel="Outro" itemValue="Outro"/>
                                             </h:selectOneMenu>   
-
+                                        </div>
+                                        <div class="col-md-2" align="left">
+                                            <label style="font-size: 14px;color: black; padding-left: 10px;padding-top: 5px;">
+                                                Imagem:  
+                                            </label>
+                                        </div>
+                                        <div class="col-md-10">
+                                            <h:inputFile value="#{experienciaBean.imagem}" class="form-control" style="width: 100%;font-size: 14px;"/>
                                         </div>
                                         <div class="col-md-2" align="left">
                                             <label style="font-size: 14px;color: black; padding-left: 10px;">
