--- a/web/minhasExperiencias.xhtml
+++ b/web/minhasExperiencias.xhtml
@@ -51,7 +51,7 @@
                         </h3>
                         <p>Tipo: #{experiencia.tipoExperiencia}</p>
                         <hr/>
-                        <img class="img-responsive" style="border-radius: 0px; width: 890px; height: 300px;" src="imagens/experiencia.jpg" alt="Imagem da postagem"/>
+                        <img class="img-responsive" style="border-radius: 0px; width: 890px; height: 300px;" src="#{experiencia.foto}" alt="Imagem da postagem"/>
                         <hr/>
                         <p>#{experiencia.texto}</p>
                         <h:form>
